# photo

./: .gitignore  pyproject.toml  setup.py
config/: preferences.yaml
photo/: __init__.py  cli.py  config.py  exif.py  utilities.py
test/: test_metadata.py  test_tags.py
test/data/: test_iphone_video.mov  test_not_photo.txt
